fixed that slide flickering thing...I think

--- a/src/style.css
+++ b/src/style.css
@@ -24,10 +24,22 @@ a {
     background-size: cover; */
 }
 
-.slide {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-}
-
+/* Fix for flickering carousel */                                                      
+.carousel-inner .carousel-item {
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: block;
+    position: absolute;
+  }
+  .carousel-inner .carousel-item:first-of-type {
+    position: relative;
+  }
+  .carousel-inner .active {
+    opacity: 1;
+  }
+  /* End of fix */
 
 
 #try {
